Fix We're #1 spacing on new-outer

--- a/css/outer/home/customers.less
+++ b/css/outer/home/customers.less
@@ -1,4 +1,6 @@
 .customers {
+  border-top: 1px solid #cccccc;
+
   .were-number-one {
     h2 {
       text-align: center;
@@ -6,6 +8,10 @@
       line-height: 22px;
       font-size: 18px;
       font-weight: 600;
+
+      // we want this to be higher than normal in the section
+      margin-top: 10px;
+      margin-bottom: 0px;
     }
   }
   .customer {
